--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <title>HOJA DE VIDA</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="CSS/dando_color.css">
+        <link rel="stylesheet" href="index.css">
         
     </head>
     <body>
         <div class="Nombre">
             <div class="Contenido">
-                <img class="foto" src="C:\Users\JAIRO\Desktop\JAIRO PASTRANA\FOTO.png" alt="foto_corbata" width="400" height="250" >
+                <img class="FOTO" src="C:\Users\JAIRO\Desktop\JAIRO PASTRANA\FOTO.png" alt="FOTO" width="400" height="250" >
                <p class="parra_1">Jairo Andres Pastrana Hernandez</p>
                <p class="parra_2">Ing. Electrónico</p>     
             </div>
