--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="Nombre">
             <div class="Contenido">
-                <img class="FOTO" src="C:\Users\JAIRO\Desktop\JAIRO PASTRANA\FOTO.png" alt="FOTO" width="400" height="250" >
+                <img class="FOTO" src="FOTO.jpeg" alt=""> >
                <p class="parra_1">Jairo Andres Pastrana Hernandez</p>
                <p class="parra_2">Ing. Electrónico</p>     
             </div>
