--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="Nombre">
             <div class="Contenido">
-                 <img class="foto" src=FOTO.jpeg" alt="foto_corbata" width="400" height="250" >
+                 <img class="foto" src=FOTO.jpeg" alt="" width="400" height="250" >
                <p class="parra_1">Jairo Andres Pastrana Hernandez</p>
                <p class="parra_2">Ing. Electrónico</p>     
             </div>
